Update 'ks1elit23-go' component image to: quay.io/jsmid/rhtap-qe:618cf27acdc7fccac7acc494914245a9bba9276e@sha256:d425ee1093b0d2a83c3cd92c8b74469b5fd0774c91439c69ec2a0fcb58aa2205

--- a/components/ks1elit23-go/overlays/development/deployment-patch.yaml
+++ b/components/ks1elit23-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ks1elit23-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:618cf27acdc7fccac7acc494914245a9bba9276e@sha256:d425ee1093b0d2a83c3cd92c8b74469b5fd0774c91439c69ec2a0fcb58aa2205
+          name: container-image
